--- a/app/views/community/stories/show.html.haml
+++ b/app/views/community/stories/show.html.haml
@@ -7,8 +7,8 @@
     .flex.justify-between
       .lhs
         .flex.items-center.mb-20
-          = image_tag @interviewer_icon_url, class: "w-[64px] h-[64px] rounded-circle mr-[-24px]"
-          = image_tag @interviewee_icon_url, class: "w-[64px] h-[64px] rounded-circle mr-24"
+          = image_tag @story.interviewer.avatar_url, class: "w-[64px] h-[64px] rounded-circle mr-[-24px]"
+          = image_tag @story.interviewee.avatar_url, class: "w-[64px] h-[64px] rounded-circle mr-24"
           = graphical_icon "podcast-gradient", css_class: 'h-[32px] w-[32px]'
         %h1.text-h1.mb-12.text-white= @title
         %p.text-p-large.mb-28.theme-dark= @description
@@ -17,11 +17,12 @@
             Listen via Youtube
             = graphical_icon "new-tab", css_class: "h-[16px] w-[16px] filter-white ml-16"
 
-          .text-label-code-caps.text-lightGold.whitespace-nowrap LENGTH 01HR 32MINS
+          .text-label-code-caps.text-lightGold.whitespace-nowrap 
+            = render ViewComponents::Community::Stories::VideoLength.new(@story)
 
-      = image_tag @interviewee_icon_url, class: "w-[280px] h-[280px] rounded-circle theme-dark shadow-lg"
+      = image_tag @story.interviewee.avatar_url, class: "w-[280px] h-[280px] rounded-circle theme-dark shadow-lg"
 
     %details.theme-dark
       %summary Read the full transcript
-      %p= @transcript
+      %p= @story.content_html
     = render ReactComponents::Community::PodcastGrid.new
