WOrk on stories grid

--- a/app/views/community/stories/show.html.haml
+++ b/app/views/community/stories/show.html.haml
@@ -25,4 +25,4 @@
     %details.theme-dark
       %summary Read the full transcript
       %p= @story.content_html
-    = render ReactComponents::Community::PodcastGrid.new
+    = render ReactComponents::Community::StoriesGrid.new(params)
