--- a/app/views/community/index.html.haml
+++ b/app/views/community/index.html.haml
@@ -16,7 +16,7 @@
 
         .text-warning.font-semibold.leading-150.flex.items-center.mb-16.py-6.px-12
           = graphical_icon 'sparkle', css_class: 'filter-warning w-[16px] h-[16px] mr-8'
-          New topics
+          Featured topics
 
         - 2.times do
           .flex.items-center.bg-white.px-20.py-12.shadow-smZ1.rounded-8.mb-8
@@ -30,7 +30,7 @@
               56
       .grid
         = link_to 'https://forum.exercism.org/' do
-          = image_tag "forum.png", alt: "", role: :presentation
+          = image_tag "screenshots/forum.png", alt: "", role: :presentation, class: 'w-[620px] shadow-baseZ1 rounded-8'
 
     .flex.gap-96.mb-96
       .grid.py-32
@@ -38,21 +38,19 @@
         %h2.text-h2.mb-8 Hear our Community Stories
         %p.mb-24.text-p-large.text-textColor5 Listen to the stories of those who have build, contributed to, and learnt from Exercism.
 
-        .flex.gap-16.mb-32
+        .grid.grid-cols-3.gap-16.mb-32
           - @community_stories.each do |community_story|
-            = link_to community_story_path(community_story) do
-              .grid.shadow-sm.p-16.bg-white.rounded-8
-                .self-center.bg-borderLight.rounded-8.mb-12{ class: "w-[100%] pb-[56.25%]" }
-                %h5.text-h5.mb-8
-                  = community_story.title
-                .flex.items-center.text-left.text-textColor6.font-semibold
-                  = graphical_icon "avatar-placeholder", css_class: "h-[24px] w-[24px] mr-8"
-                  - interviewee = community_story.interviewee
-                  - if interviewee.profile
-                    = link_to avatar(interviewee), profile_path(interviewee)
-                  - else
-                    = avatar(interviewee)
-                    = interviewee.name
+            = link_to community_story_path(community_story), class: 'flex flex-col grid shadow-sm p-16 bg-white rounded-8' do
+              .bg-borderLight.rounded-8.mb-12{ class: "w-[100%] pb-[56.25%]" }
+              %h5.text-h5.mb-8= community_story.title
+              .flex.items-center.text-left.text-textColor6.font-semibold.mt-auto
+                = graphical_icon "avatar-placeholder", css_class: "h-[24px] w-[24px] mr-8"
+                - interviewee = community_story.interviewee
+                - if interviewee.profile
+                  = link_to avatar(interviewee), profile_path(interviewee)
+                - else
+                  = avatar(interviewee)
+                  = interviewee.name
 
         -# Temporarily disable this link until we have a separate page
           = link_to "", class: 'explore-link' do
@@ -91,8 +89,6 @@
       %h2.text-h2.flex.items-center
         = graphical_icon "contributors-gradient", css_class: 'mr-24'
         Contributors
-      .text-p-large.w-1-2.border-l-1.border-borderLight.pl-48
-        The people who help build Exercism.
 
     -# .flex.gap-16.mb-24
       .border-1.border-borderLight.flex.items-center.py-12.px-24.rounded-8.text-24.grow.shadow-xsZ1v2
