--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -221,7 +221,8 @@
 @import "./pages/journey/reputation";
 @import "./pages/journey/badges";
 @import "./pages/impact";
-@import "./pages/community-page";
+@import "./pages/community";
+@import "./pages/community-story";
 
 @import "./highlighters/highlightjs-light";
 @import "./highlighters/highlightjs-dark";
