Add community launch modal

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -148,7 +148,7 @@
 @import "./modals/mentoring-sessions";
 @import "./modals/confirm-finish-student-mentor-discussion";
 @import "./modals/finish-student-mentor-discussion";
-@import "./modals/welcome-to-v3";
+@import "./modals/community-launch";
 @import "./modals/become-mentor";
 @import "./modals/change-mentor-tracks";
 @import "./modals/select-exercise-for-mentoring";
