--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -1,5 +1,5 @@
 #page-dashboard
-  = render ReactComponents::Modals::FirstTimeModal.new
+  = render ReactComponents::Modals::CommunityLaunchModal.new
 
   .summary-bar
     .lg-container.container
