--- a/app/css/modals/community-launch.css
+++ b/app/css/modals/community-launch.css
@@ -1,6 +1,6 @@
 @import "../styles";
 
-.m-welcome-to-v3.c-modal.--cover {
+.m-community-launch.c-modal.--cover {
     background: var(--modalBackgroundColor);
 
     & .--modal-container {
@@ -19,7 +19,7 @@
 
         @apply mt-20 mb-40;
         @apply py-40 px-48 bg-backgroundColorA;
-        @apply shadow-lgZ1;
+        @apply shadow-lgZ1 rounded-16;
         @apply flex items-start;
         width: 100%;
         max-width: 1180px;
@@ -49,7 +49,7 @@
             @apply text-16 leading-huge;
         }
         & .improvements {
-            @apply mt-24 mb-40;
+            @apply mt-24 mb-32;
 
             & .improvement {
                 @apply flex items-start;
@@ -102,16 +102,6 @@
             }
             & p {
                 @apply text-16 leading-paragraph;
-                @apply mb-24;
-            }
-
-            & .contributors {
-                @apply grid gap-16 grid-cols-6;
-
-                & .c-avatar {
-                    width: 48px;
-                    height: 48px;
-                }
             }
         }
     }
