--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -10,8 +10,10 @@
             Accelerate your learning with Exercism&apos;s community.
           Ask questions, explore ideas, and get to know millions of other developers upskilling on Exercism.
 
-        = link_to 'https://forum.exercism.org/', class: "btn-primary btn-l mb-20 flex" do
-          Explore our forum
+        = link_to 'https://forum.exercism.org/', class: "btn-primary btn-l mb-20 w-[fit-content]" do
+          %span Explore our forum
+          = graphical_icon "arrow-right"
+
 
         .text-warning.font-semibold.leading-150.flex.items-center.mb-8.py-6.px-12
           = graphical_icon 'sparkle', css_class: 'filter-warning w-[16px] h-[16px] mr-8'
@@ -78,17 +80,22 @@
             See how you can help
             = graphical_icon "arrow-right", css_class: 'filter-textColor1'
 
-  .bg-repeat-round.flex.mb-64{ class: "h-[576px] bg-[url(photos/mug.png)]" }
-    .m-auto.rounded-16.bg-backgroundColorH.pt-32.px-24.pb-48.grid.place-items-center.grow{ class: 'max-w-[640px]' }
+  -# .bg-repeat-round.flex.mb-64{ class: "h-[600px] bg-[url(photos/mug.png)]" }
+  .flex.mb-64{ class: "h-[600px] bg-[url(photos/swag-andre.jpg)] bg-cover bg-center" }
+    -# .columns-6
+    -#   - 12.times do |idx|
+    -#     = image_tag "photos/swag-#{idx + 1}.jpg", width: 300, height: 300;
+    .m-auto.rounded-16.border-solid.border-t-6.border-b-6.border-backgroundColorH.pt-32.px-24.pb-48.grid.place-items-center.grow{ class: 'max-w-[640px] bg-[#130b43dd]' }
       .bg-gotToLoveAPurple.flex.text-white.py-6.px-16.items-center.rounded-100.shadow-dark_xsZ1.font-semibold.mb-32.leading-150
         = graphical_icon "moon", css_class: "filter-white h-[16px] w-[16px] mr-16"
         Dark Mode styles available!
       = graphical_icon "exercism-face", css_class: 'filter-white h-[64px] w-[64px] mb-12'
       %h2.text-h2.text-white.text-unnamed15.mb-8 Explore our swag
       .leading-150.text-20.text-borderLight.mb-24
-        Stop looking shit. Buy our shit.
+        Enhance your desk. Enhance your look.
       = link_to "https://swag.exercism.org", class: 'btn-primary btn-l' do
-        Get swagged up
+        %span Get some swag
+        = graphical_icon "arrow-right"
 
   .lg-container
     = render ReactComponents::Community::VideoGrid.new(params)
