--- a/app/views/community/stories/show.html.haml
+++ b/app/views/community/stories/show.html.haml
@@ -1,7 +1,7 @@
 #page-community-story
   %header.theme-dark.pb-128
     .md-container
-      = link_to Exercism::Routes.community_index_path, class: "back-link" do
+      = link_to Exercism::Routes.community_path, class: "back-link" do
         = graphical_icon "arrow-left", css_class: "w-[16px] h-[16px] mr-12 filter-lightBlue"
         Back to Community
       .relative
