--- a/app/css/modals/community-launch.css
+++ b/app/css/modals/community-launch.css
@@ -19,7 +19,7 @@
 
         @apply mt-20 mb-40;
         @apply py-40 px-48 bg-backgroundColorA;
-        @apply shadow-lgZ1;
+        @apply shadow-lgZ1 rounded-16;
         @apply flex items-start;
         width: 100%;
         max-width: 1180px;
