Build community-page (#3064)
* setup routing

* Add some components

* Add avatar grid - WIP

* Add swag section

* Add details

* Find a hack for negative grid gaps, add more details and proper styling

* Add contributors section

* Add `new` label

* Add link, create better layout for community stories section

* Add lightblue filter

* Create VideoList ReactComponent

* Add stuff to VideoList

* Remove unused component

* Add fake tracks and paginations for videolist

* Use h5 to featured contributors' handle

* Add role: :presentation to image_tag

* Add show page

* Add elements to individual podcast page

* Move @transcript to controller

* Refine styling of `community-show`

* Add podcast grid

* Link to forum on community page

* Add link to donate page on community page

* Add supporter avatar urls

* Add search-bar to Community Videos grid

* Add nowrap to yt link and video-length indicator

* Add backlink from show to index

* Change Last 7 days to This week on Contributors list

* Add swag link

* Link to forum from image

* Temporarily disable explore link

* Comment out featured contributor

* Allow searching for community videos

* Add information to community video grid component

* Fetch videos for community video grid

* Add Discourse SSO setup (#3054)

* Add Discourse SSO setup

* Get discourse sso flow working fully

* Responsive tweaks on dashboard and landing page (#3056)

* Change img width to 100% on landing page

* Remove flex below xl screen size

* Move social icons below under lg, remove decorations under xl, change breakpoint on navbar,

* Keep honouring aspect ratio

* Update gap to gap-y

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Fix over-caching of exercises page (#3055)

* Fix another bug in caching the header (#3066)

* Set trust_level for over 20 rep users after 30secs (

--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -19,4 +19,14 @@
     .filter-orange {
         filter: var(--orange-filter);
     }
+
+    .filter-lightBlue {
+        filter: invert(25%) sepia(55%) saturate(3687%) hue-rotate(223deg)
+            brightness(94%) contrast(93%);
+    }
+
+    .filter-warning {
+        filter: invert(66%) sepia(97%) saturate(2953%) hue-rotate(4deg)
+            brightness(92%) contrast(103%);
+    }
 }
