--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -55,7 +55,7 @@
               %h5.text-h5.mb-8= community_story.title
               .flex.items-center.text-left.text-textColor6.font-semibold.mt-auto
                 - interviewee = community_story.interviewee
-                = avatar interviewee, css_class: "h-[24px] w-[24px] mr-8"
+                = avatar interviewee, css_class: "h-[24px] w-[24px] mr-8 rounded-circle bg-cover"
                 = interviewee.name
 
         -# Temporarily disable this link until we have a separate page
