Add unlock help button (#3046)
* Add API method to unlock help for a solution

* dd submitted shortcut

* Add button to unlock help

* Fix approaches logic

* Show approaches tab when there are approaches

* Don't lock community solutions and approaches tabs when solution was iterated on

* Update tooltips

* Add error specific to no being able to unlock help for a solution

* Fix logic for unlocking help

* Minor refactoring

* Fix bug

* Use small buttons

* Rough styling for unlock button

* Add &s after solution

* UI changes to tooltips

* Update tooltip texts

* Add react tooltip unlock button

* Fix unlock_button

* Hack to render tippy nested react components

* Replace onShown with onAfterUpdate

* Change spacing and colour on tooltip

* Add functionality for button, style error message and everything else

* Change jest config

* Rename unlock button component to UnlockHelpButton

* Update app/models/solution.rb

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Fix mapping

* Fix tippy warning

* Fix jest (#3073)

* Fix Jest

* Uncomment block

* Fix console.log

* Remove stubbing

Co-authored-by: dem4ron <demaaron88@gmail.com>
Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

--- a/app/views/tracks/community_solutions/tooltip_locked.html.haml
+++ b/app/views/tracks/community_solutions/tooltip_locked.html.haml
@@ -1,10 +1,16 @@
-.c-generic-tooltip.text-14{ class: "!py-16 !px-24 !max-w-[420px]" }
-  %p.text-16.text-white.font-semibold.leading-170.mb-12
+.c-generic-tooltip.text-16.leading-150{ class: "!py-16 !px-24 !max-w-[420px]" }
+  %p.text-lightPurple.font-semibold.mb-4
     Struggling with this exercise?
 
-  %p.mb-4.leading-150
-    Unlock Community Solutions to see how the community approached and solved #{@exercise.title}.
 
-  / TODO: add button to manually unlock help
-  .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
-    Warning! We highly recommend you try your best without revealing Community Solutions first.
+  - if @solution&.downloaded? || @solution&.submitted?
+    %p.mb-12.text-borderLight{ class: '!mt-0 ' }
+      Unlock Community Solutions to see how the community approached and solved #{@exercise.title}.
+
+    = ReactComponents::Track::UnlockHelpButton.new(unlock_help_api_solution_url(@solution.uuid))
+  - else
+    %p.mb-12
+      You can only view the Community Solutions tab if you've attempted this exercise at least once.
+
+  .font-semibold.text-lightGold.text-14.leading-150
+    We highly recommend you try your best without exploring the Community Solutions tab first.
