Make external links behave like external links

--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -10,7 +10,7 @@
             Accelerate your learning with Exercism&apos;s community.
           Ask questions, explore ideas, and get to know millions of other developers upskilling on Exercism.
 
-        = link_to 'https://forum.exercism.org/', class: "btn-primary btn-l mb-20 w-[fit-content]" do
+        = link_to 'https://forum.exercism.org/', target: "_blank", rel: "noreferrer", class: "btn-primary btn-l mb-20 w-[fit-content]" do
           %span Explore our forum
           = graphical_icon "arrow-right"
 
@@ -19,7 +19,7 @@
           = graphical_icon 'sparkle', css_class: 'filter-warning w-[16px] h-[16px] mr-8'
           Recent topics
 
-        = link_to "https://forum.exercism.org/t/what-are-your-favorite-books-on-programming/187", class: 'flex items-center bg-white px-20 py-12 shadow-smZ1 rounded-8 mb-8' do
+        = link_to "https://forum.exercism.org/t/what-are-your-favorite-books-on-programming/187", target: "_blank", rel: "noreferrer", class: 'flex items-center bg-white px-20 py-12 shadow-smZ1 rounded-8 mb-8' do
           = image_tag "team/jeremy-walker.jpg", alt: "A photo of Jeremy Walker", class: 'mr-8 h-[32px] w-[32px] rounded-circle'
           .flex.flex-col.mr-auto
             %h5.text-h5 What are your favorite books on programming?
@@ -29,7 +29,7 @@
             = graphical_icon "message-bubble-square"
             3
 
-        = link_to "https://forum.exercism.org/t/version-3-1-0-of-the-cli-has-been-released/188", class: 'flex items-center bg-white px-20 py-12 shadow-smZ1 rounded-8 mb-8' do
+        = link_to "https://forum.exercism.org/t/version-3-1-0-of-the-cli-has-been-released/188", target: "_blank", rel: "noreferrer", class: 'flex items-center bg-white px-20 py-12 shadow-smZ1 rounded-8 mb-8' do
           = image_tag "team/erik.jpg", alt: "A photo of Erik Schierboom", class: 'mr-8 h-[32px] w-[32px] rounded-circle'
           .flex.flex-col.mr-auto
             %h5.text-h5 Version 3.1.0 of the CLI has been released
@@ -39,7 +39,7 @@
             = graphical_icon "message-bubble-square"
             1
       .grid
-        = link_to 'https://forum.exercism.org/' do
+        = link_to 'https://forum.exercism.org/', target: "_blank", rel: "noreferrer" do
           = image_tag "screenshots/forum.png", alt: "", role: :presentation, class: 'w-[620px] shadow-baseZ1 rounded-8'
 
     .flex.gap-96.mb-48
@@ -85,7 +85,7 @@
       %h2.text-h2.text-white.text-unnamed15.mb-8 Explore our swag
       .leading-150.text-20.text-borderLight.mb-24
         Enhance your desk. Enhance your look.
-      = link_to "https://swag.exercism.org", class: 'btn-primary btn-l' do
+      = link_to "https://swag.exercism.org", target: "_blank", rel: "noreferrer", class: 'btn-primary btn-l' do
         %span Get some swag
         = graphical_icon "arrow-right"
 
