--- a/app/views/community/stories/show.html.haml
+++ b/app/views/community/stories/show.html.haml
@@ -38,15 +38,8 @@
       .grid.grid-cols-3.gap-16
         - @other_stories.each do |community_story|
           = link_to community_story_path(community_story), class: 'flex flex-col grid shadow-smZ1 p-16 bg-white rounded-8' do
-            .bg-borderLight.rounded-8.mb-12{ class: "w-[100%] pb-[56.25%]" }
+            = image_tag community_story.thumbnail_url, class: "bg-borderLight rounded-8 mb-12 w-[100%]", width: 243, height: 136
             %h5.text-h5.mb-8= community_story.title
             .flex.items-center.text-left.text-textColor6.font-semibold.mt-auto
-              = graphical_icon "avatar-placeholder", css_class: "h-[24px] w-[24px] mr-8"
-              - interviewee = community_story.interviewee
-              - if interviewee.profile
-                = link_to avatar(interviewee), profile_path(interviewee)
-              - else
-                = avatar(interviewee)
-                = interviewee.name
-
-
+              = avatar community_story.interviewee, css_class: "h-[24px] w-[24px] mr-8"
+              = community_story.interviewee.name
