--- a/app/views/community/stories/show.html.haml
+++ b/app/views/community/stories/show.html.haml
@@ -31,7 +31,7 @@
   .md-container
     .bg-white.shadow-lg.rounded-16.py-32.px-40{ class: 'mt-[-64px]' }
       .flex.flex-row.mb-24
-        = graphical_icon "podcast-gradient", css_class: "h-[48px] w-[48px] mb-24"
+        = graphical_icon "podcast-gradient", css_class: "h-[48px] w-[48px] mr-24"
         .flex.flex-col
           %h2.text-h2.mb-8 More Stories from our community
           %p.text-p-large Listen, learn and be inspired by our community members.
