--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -12,8 +12,13 @@
 
       .block.flex-grow
         %h1.text-h0.mb-8.md:mb-8= @approach.title
-        .flex.items-center.text-16.font-semibold.leading-150
-          = render ReactComponents::Track::Credits.new(@users.map { |user| user[:avatar_url] }, @num_authors, "author", @num_contributors, "contributor")
+        .flex.items-center.text-16.font-semibold.leading-150.text-textColor1
+          = render ReactComponents::Track::Credits.new(@users, @num_authors, "author", @num_contributors, "contributor", css_class: 'h-[40px] mr-12')
+          %span.text-textColor6.mr-12
+            &middot
+          %span.text-textColor6
+            Published at
+            = format_date(@approach.created_at)
   .md-container.mb-32.md:mb-48
     %article.shadow-lgZ1.bg-backgroundColorA.rounded-8
       .share-bar.border-b-1.border-borderColor6.py-12.md:py-16.px-24.md:px-32.flex.items-center
@@ -54,5 +59,4 @@
             = other_approach[:title]
           %p.text-p-base.text-textColor6.mb-12
             = other_approach[:blurb]
-          -# TODO change this after reworking Credits
-          = render ReactComponents::Track::Credits.new(other_approach[:users].map { |user| user[:avatar_url] }, other_approach[:num_authors], "author", other_approach[:num_contributors], "contributor", css_class: "mt-auto")
+          = render ReactComponents::Track::Credits.new(other_approach[:users], other_approach[:num_authors], "author", other_approach[:num_contributors], "contributor", css_class: "text-14 text-textColor1 font-semibold mt-auto h-[32px]")
