--- a/app/views/community/stories/show.html.haml
+++ b/app/views/community/stories/show.html.haml
@@ -5,8 +5,8 @@
         = graphical_icon "arrow-left", css_class: "w-[16px] h-[16px] mr-12 filter-lightBlue"
         Back to Community
       .relative
-        .flex.justify-between.mb-48
-          .lhs
+        .grid.grid-cols-1.lg:grid-cols-2.gap-64.mb-48
+          .block
             .flex.items-center.mb-20
               = image_tag @story.interviewer.avatar_url, class: "w-[64px] h-[64px] rounded-circle mr-[-24px]"
               = image_tag @story.interviewee.avatar_url, class: "w-[64px] h-[64px] rounded-circle mr-24"
@@ -22,7 +22,7 @@
                 = render ViewComponents::Community::Stories::VideoLength.new(@story)
 
           -# = image_tag @story.image_url, class: "w-[280px] h-[280px] shadow-lg"
-          .relative.rounded-8.overflow-hidden.flex-grow
+          .relative.rounded-8.overflow-hidden.flex-grow{ class: 'w-fill lg:max-w-[510px]' }
             %iframe{ width: "560", height: "315", src: @story.youtube_embed_url, title: @story.title, frameborder: "0", allow: "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: true }
 
         .c-textual-content.--large.rounded-12.py-24.px-24{ class: 'bg-[#5042AD] text-[#F0F3F9]' }
@@ -35,7 +35,7 @@
         .flex.flex-col
           %h2.text-h2.mb-8 More Stories from our community
           %p.text-p-large Listen, learn and be inspired by our community members.
-      .grid.grid-cols-3.gap-16
+      .grid.grid-cols-1.lg:grid-cols-3.gap-16
         - @other_stories.each do |community_story|
           = link_to community_story_path(community_story), class: 'flex flex-col grid shadow-smZ1 p-16 bg-white rounded-8' do
             .bg-borderLight.rounded-8.mb-12{ class: "w-[100%] pb-[56.25%]" }
@@ -43,10 +43,7 @@
             .flex.items-center.text-left.text-textColor6.font-semibold.mt-auto
               = graphical_icon "avatar-placeholder", css_class: "h-[24px] w-[24px] mr-8"
               - interviewee = community_story.interviewee
-              - if interviewee.profile
-                = link_to avatar(interviewee), profile_path(interviewee)
-              - else
-                = avatar(interviewee)
-                = interviewee.name
+              = avatar interviewee, css_class: "h-[24px] w-[24px] mr-8 rounded-circle bg-cover"
+              = interviewee.name
 
 
