--- a/app/views/community/stories/show.html.haml
+++ b/app/views/community/stories/show.html.haml
@@ -2,7 +2,7 @@
   %header.theme-dark.pb-128
     .md-container
       = link_to Exercism::Routes.community_path, class: "back-link" do
-        = graphical_icon "arrow-left", css_class: "w-[16px] h-[16px] mr-12 filter-lightBlue"
+        = graphical_icon "arrow-left", css_class: "w-[16px] h-[16px] mr-12 filter-white"
         Back to Community
       .relative
         .grid.grid-cols-1.lg:grid-cols-2.gap-64.mb-48
