Update styling of articles

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -176,6 +176,7 @@
 @import "./pages/blog";
 @import "./pages/blog-post";
 @import "./pages/approach";
+@import "./pages/article";
 @import "./pages/donate";
 @import "./pages/landing";
 @import "./pages/settings";
