--- a/app/views/tracks/articles/show.html.haml
+++ b/app/views/tracks/articles/show.html.haml
@@ -42,7 +42,7 @@
       .flex.justify-center.mb-32
         = graphical_icon "dig-deeper-gradient", css_class: "h-[32px] mr-24 self-center"
         .flex.flex-col
-          %h2.text-h3.font-bold.mb-4 Other Articles to #{@exercise.title}
+          %h2.text-h3.font-bold.mb-4 Other Articles for #{@exercise.title}
           .text-p-base.text-textColor6 Explore more ideas about this exercise
 
       .grid.gap-24.grid-cols-1.sm:grid-cols-2.md:grid-cols-3.mb-32
