--- a/app/views/community/show.html.haml
+++ b/app/views/community/show.html.haml
@@ -85,7 +85,7 @@
       %h2.text-h2.text-white.text-unnamed15.mb-8 Explore our swag
       .leading-150.text-20.text-borderLight.mb-24
         Enhance your desk. Enhance your look.
-      = link_to "https://swag.exercism.org", target: "_blank", rel: "noreferrer", class: 'btn-primary btn-l' do
+      = link_to "https://swag.exercism.org", class: 'btn-primary btn-l' do
         %span Get some swag
         = graphical_icon "arrow-right"
 
