Apply suggestions from code review
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/app/views/mailers/mailshots_mailer/community_launch.text.erb
+++ b/app/views/mailers/mailshots_mailer/community_launch.text.erb
@@ -12,7 +12,7 @@ Check the forum at https://forum.exercism.org
 
 💡 Dig Deeper tabs
 
-Solving an exercise on Exercism is just the start.  The real magic comes afterwards - working with mentors, exploring others solutions, and now with our new Dig Deeper tab, exploring the different approaches and tradeoffs that people take when solving that exercise.
+Solving an exercise on Exercism is just the start. The real magic comes afterwards - working with mentors, exploring others solutions, and now with our new Dig Deeper tab, exploring the different approaches and tradeoffs that people take when solving that exercise.
 
 Check out the blog post for more details: https://exercism.org/blog/dig-deeper
 
@@ -20,7 +20,7 @@ Check out the blog post for more details: https://exercism.org/blog/dig-deeper
 
 🤖 Deeper Automated Feedback
 
-Earlier this month we launched our biggest step in automation so far.  Our new Representation system mean that mentors' feedback will now be automatically given to see people who submit similar solutions in the future. You should now see more accurate automated feedback more frequently across a wider range of exercises.
+Earlier this month we launched our biggest step in automation so far. Our new Representation system mean that mentors' feedback will now be automatically given to see people who submit similar solutions in the future. You should now see more accurate automated feedback more frequently across a wider range of exercises.
 
 Check out the blog post for more details: https://exercism.org/blog/representers
 
@@ -28,7 +28,7 @@ Check out the blog post for more details: https://exercism.org/blog/representers
 
 👕 Swag Store
 
-Since Exercism started, people have been requesting swag. While it's finally here! T-shirts, mugs, mousemats, jigsaws and more. And we've priced everything at cost so as many people as possible can access it. So come get (geek-)stylish, with some Exercism swag 🙂
+Since Exercism started, people have been requesting swag. Well it's finally here! T-shirts, mugs, mousemats, jigsaws and more. And we've priced everything at cost so as many people as possible can access it. So come get (geek-)stylish, with some Exercism swag 🙂
 
 Explore the store at https://swag.exercism.org
 
