--- a/app/views/tracks/articles/show.html.haml
+++ b/app/views/tracks/articles/show.html.haml
@@ -17,7 +17,7 @@
       .block.flex-grow
         %h1.text-h0.mb-8.md:mb-8= @article.title
         .flex.items-center.text-16.font-semibold.leading-150
-          = render ReactComponents::Track::Credits.new(@users.map { |user| user[:avatar_url] }, @num_authors, "author", @num_contributors, "contributor")
+          = render ReactComponents::Common::Credits.new(@users.map { |user| user[:avatar_url] }, @num_authors, "author", @num_contributors, "contributor")
   .md-container.mb-32.md:mb-48
     %article.shadow-lgZ1.bg-backgroundColorA.rounded-8
       .share-bar.border-b-1.border-borderColor6.py-12.md:py-16.px-24.md:px-32.flex.items-center
@@ -59,5 +59,4 @@
               = other_article[:title]
             %p.text-p-base.text-textColor6.mb-12
               = other_article[:blurb]
-            -# TODO change this after reworking Credits
-            = render ReactComponents::Track::Credits.new(other_article[:users].map { |user| user[:avatar_url] }, other_article[:num_authors], "author", other_article[:num_contributors], "contributor", css_class: "mt-auto")
+            = render ReactComponents::Common::Credits.new(other_article[:users], other_article[:num_authors], "author", other_article[:num_contributors], "contributor", css_class: "mt-auto")
