--- a/app/views/tracks/mentor_discussions/tooltip_locked.html.haml
+++ b/app/views/tracks/mentor_discussions/tooltip_locked.html.haml
@@ -3,7 +3,7 @@
     Struggling with this exercise?
 
   %p.mb-4.leading-150
-    You can only receive mentoring if you&apos;ve submitted a solution to this exercise. If you’re struggling, try exploring Community Solutions or Dig Deeper.
+    You can only receive mentoring if you&apos;ve submitted a solution to this exercise. If you&apos;re struggling, try exploring Community Solutions or Dig Deeper.
 
   .font-semibold.text-lightGold.text-14.leading-170.flex.flex-row.items-center
     We highly recommend you try your best without revealing Community Solutions or Dig Deeper first.
