--- a/app/views/mailers/mailshots_mailer/community_launch.text.erb
+++ b/app/views/mailers/mailshots_mailer/community_launch.text.erb
@@ -10,7 +10,7 @@ Check the forum at https://forum.exercism.org
 
 ——— 
 
-💡 Dig Deeper tabs
+💡 Dig Deeper section
 
 Solving an exercise on Exercism is just the start. The real magic comes afterwards - working with mentors, exploring others solutions, and now with our new Dig Deeper tab, exploring the different approaches and tradeoffs that people take when solving that exercise.
 
@@ -18,11 +18,11 @@ Check out the blog post for more details: https://exercism.org/blog/dig-deeper
 
 ——— 
 
-🤖 Deeper Automated Feedback
+🤖 Better Automated Feedback
 
 Earlier this month we launched our biggest step in automation so far. Our new Representation system means that mentors' feedback will now be automatically given to people who submit similar solutions in the future. You should now see more accurate automated feedback more frequently across a wider range of exercises.
 
-Check out the blog post for more details: https://exercism.org/blog/representers
+Check out the blog post for more details: https://exercism.org/blog/introducing-representers
 
 ——— 
 
